[package]
name = "no_std_binary_heap"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
keywords = ["no_std", "binary heap", "priority queue"]
categories = ["algorithms"]
repository = "https://github.com/luke-lorenzini/binary-heap/"
description = "A no_std implementation of a binary heap. Binary heap is implemented as a max heap."
readme = "README.md"
exclude = [
    "src/bin/*",
    "tests/*",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
